--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
          v2.0 | 20110126
          License: none (public domain)
       */
+
       html, body, div, span, applet, object, iframe,
       h1, h2, h3, h4, h5, h6, p, blockquote, pre,
       a, abbr, acronym, address, big, cite, code,
@@ -28,6 +29,7 @@
           font: inherit;
           vertical-align: baseline;
       }
+      /* HTML5 display-role reset for older browsers */
       article, aside, details, figcaption, figure,
       footer, header, hgroup, menu, nav, section {
           display: block;
