--- a/web/index_template.html
+++ b/web/index_template.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koil</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <title>momentum</title>
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/
          v2.0 | 20110126
@@ -78,7 +77,7 @@
   </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script type="text/javascript" src="odin.js"></script>
+	<script type="text/javascript" src="web/odin.js"></script>
 	<script>
 		var odinMemoryInterface = new odin.WasmMemoryInterface();
 		odinMemoryInterface.setIntSize(4);
